CaptchaSettings: -reviewed #82992 -fixes #82992 GetComics: -updated pattern HotSpotComMy: -added decrypter for this site KisAmeCm: -fixed base64 pattern + blogspot handling NewgroundsCom: -fixed decrypter, updated pattern DropBox: -enabled resume support KernelVideoSharingCom: -updated pattern for thisvid PremiumTo: -fixed missing plugin, caused by renamed configInterface class which fails for case insensitive filesystem Sndcloud: -updated getDirectlink Tf1Fr: -updated to support new react layout PluginForHost: -refactored Challenge.isAccountLogin stuff, now provides customizable method isAccountLoginCaptchaChallenge IntervalController: -fixed interval handling on startup, lastFire was missing and thus the script executed without waiting for interval LinkGrabberPanel: -updated createSidebar to have minimimSize XFileSharingProBasic: -updated isPremiumOnlyHTML and isOffline build>full
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@40762 ebf7c1c2-ba36-0410-9fe8-c592906822b4

Former-commit-id: 24ae4a6c6de52dffa686bc6602ff6d82267e870f